--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -17,12 +17,12 @@
   height: 100px;
   flex-direction: row;
   justify-content: space-between;
-  border: 2px solid transparent;
+  border: 2px solid pink;
   padding: 1rem;
   background: #fff;
   color: #f6d342; }
   .nav__list {
-    border: 2px solid transparent;
+    border: 2px solid red;
     width: 650px;
     height: 80px;
     padding: 0.3rem; }
@@ -32,7 +32,7 @@
       align-items: flex-start;
       justify-content: space-around;
       padding: 0.5rem;
-      border: 2px solid transparent; }
+      border: 2px solid blue; }
       .nav__list__con li {
         list-style-type: none;
         cursor: pointer;
@@ -124,7 +124,7 @@
     width: 100%; }
 
 .paragraph_1 {
-  border: 2px solid transparent;
+  border: 2px solid red;
   width: 100vw;
   height: 700px;
   background: url("../../pics/Union 1.png");
@@ -136,7 +136,7 @@
   margin: 0vh 0;
   clip-path: polygon(0% 100%, 100% 50%, 100% 0%, 0% 0%); }
   .paragraph_1 section {
-    border: 2px solid transparent;
+    border: 2px solid green;
     width: 43vw;
     height: 500px;
     margin: 5vh 40px;
@@ -173,7 +173,7 @@
     display: flex;
     flex-direction: column;
     grid-area: 1/2;
-    border: 2px solid transparent; }
+    border: 2px solid red; }
     .paragraph_1__art .trees {
       width: 40vw;
       height: 500px;
@@ -193,12 +193,12 @@
     justify-content: space-evenly;
     padding: 1rem;
     margin-top: 20px;
-    border: 2px solid transparent;
+    border: 2px solid blue;
     border-radius: 1rem;
     flex-wrap: wrap-reverse; }
 
 .tree {
-  border: 2px solid transparent;
+  border: 2px solid red;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -220,7 +220,7 @@
     bottom: 15vh; }
 
 .articles {
-  border: 2px solid transparent;
+  border: 2px solid green;
   width: 100vw;
   height: 700px;
   display: grid;
@@ -239,25 +239,26 @@
     text-align: center;
     position: relative;
     top: 50px;
-    border: 2px solid transparent; }
-    .articles__firstChild > .h2_1 {
+    border: 2px solid red; }
+    .articles__firstChild .h2_1 {
       font-size: 2rem;
       font-weight: 100;
       color: orange;
-      width: 360px;
+      width: fit-content;
       height: fit-content;
       padding: 1rem;
       word-wrap: wrap;
       text-align: center;
       position: relative;
-      top: 100px;
-      border: 2px solid transparent; }
-      .articles__firstChild > .h2_1 .h2_2 {
-        height: 100px; }
-        .articles__firstChild > .h2_1 .h2_2 b {
-          font-size: 5rem; }
+      border: 2px solid green; }
+    .articles__firstChild .h2_2 {
+      font-size: 2rem;
+      height: 100px;
+      border: 2px solid brown; }
+      .articles__firstChild .h2_2 b {
+        font-size: 5rem; }
     .articles__firstChild p {
-      border: 2px solid transparent;
+      border: 2px solid red;
       width: 500px;
       height: 200px;
       margin: 10% 10%;
@@ -269,9 +270,9 @@
       height: 400px;
       position: relative;
       display: flex;
-      border: 2px solid transparent; }
+      border: 2px solid red; }
   .articles .articles__paragraph {
-    border: 2px solid transparent;
+    border: 2px solid cyan;
     height: fit-content;
     margin: 0px 40px;
     position: absolute;
@@ -282,7 +283,7 @@
     align-items: center;
     grid-area: 1/1; }
     .articles .articles__paragraph p {
-      border: 2px solid transparent;
+      border: 2px solid gold;
       width: 40vw;
       height: 200px;
       font-size: 15px;
@@ -299,7 +300,7 @@
       border-radius: 1rem;
       flex-wrap: wrap-reverse; }
   .articles-author {
-    border: 2px solid transparent;
+    border: 2px solid red;
     grid-area: 1 / 2;
     display: flex;
     justify-content: center;
@@ -318,11 +319,11 @@
   position: relative;
   overflow: hidden;
   transition: All 1s ease forwards;
-  border: 2px solid transparent; }
+  border: 2px solid red; }
   .shopping__slider {
     width: inherit;
     height: inherit;
-    border: 2px solid transparent;
+    border: 2px solid cyan;
     position: relative;
     overflow: hidden;
     transition: all 1s ease-in; }
@@ -333,11 +334,11 @@
       position: absolute;
       animation: showUp 3s ease-in forwards;
       border: 1px solid #fff;
-      border: 2px solid transparent; }
+      border: 2px solid blue; }
       .shopping__slider__one h2 {
         font-size: 4rem;
         width: 100%;
-        border: 2px solid transparent;
+        border: 2px solid red;
         color: deepskyblue; }
     .shopping__slider .shop-section-1 {
       width: 100vw;
@@ -352,10 +353,11 @@
       width: inherit;
       height: inherit;
       display: grid;
+      border: 4px solid red;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(3, 1fr); }
       .shopping__slider .shop-section-2 .childTwoHeader {
-        border: 2px solid transparent;
+        border: 2px solid blue;
         grid-area: 2/3;
         width: 350px;
         height: 220px;
@@ -364,7 +366,7 @@
         .shopping__slider .shop-section-2 .childTwoHeader h2 {
           font-size: 4rem;
           width: 100%;
-          border: 2px solid transparent; }
+          border: 2px solid cyan; }
   .shopping .loveIcon {
     position: relative;
     animation: expands 0.2s ease-in-out forwards; }
@@ -381,16 +383,16 @@
       position: relative;
       animation: moveRight 2s ease 4s forwards infinite; }
   .shopping__paragraph {
-    border: 2px solid transparent;
+    border: 2px solid red;
     grid-area: 2 / 3;
     padding: 2rem 1rem;
     height: 450px;
     position: relative;
     bottom: 200px;
-    right: 200px;
+    right: 50%;
     margin: 0vh 5vh; }
     .shopping__paragraph__text {
-      border: 2px solid transparent;
+      border: 2px solid blue;
       width: 500px;
       height: 200px;
       padding: 1rem;
@@ -403,7 +405,7 @@
     border-radius: 1%;
     margin: 50px 0;
     position: relative;
-    border: 2px solid transparent;
+    border: 2px solid green;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -429,10 +431,10 @@
   display: flex;
   flex-direction: column;
   margin-top: 2vh;
-  border: 2px solid transparent; }
+  border: 2px solid blue; }
   .counselling__header {
     width: 100%;
-    border: 2px solid transparent;
+    border: 2px solid red;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -445,9 +447,9 @@
       align-items: center;
       justify-content: center;
       position: relative;
-      border: 2px solid transparent; }
+      border: 2px solid gold; }
       .counselling__header__name h1 {
-        border: 2px solid transparent;
+        border: 2px solid red;
         font-size: 4rem;
         text-align: center;
         position: relative;
@@ -463,14 +465,14 @@
       .counselling__header__name h2 {
         color: #34a2e2; }
   .counselling__el {
-    border: 2px solid transparent;
+    border: 2px solid black;
     height: 500px;
     width: 99vw;
     background: #f4f4f4; }
     .counselling__el__feeling {
       width: inherit;
       height: 250px;
-      border: 2px solid transparent;
+      border: 2px solid red;
       padding: 1rem;
       display: flex;
       flex-direction: row;
@@ -478,14 +480,14 @@
       align-items: center; }
       .counselling__el__feeling .text {
         padding: 1rem;
-        border: 2px solid transparent; }
+        border: 2px solid pink; }
         .counselling__el__feeling .text__content {
           position: relative; }
         .counselling__el__feeling .text h2 {
           font-size: 2rem;
           color: grey; }
       .counselling__el__feeling .feeling {
-        border: 2px solid transparent;
+        border: 2px solid pink;
         height: 150px;
         text-align: center;
         padding: 1rem; }
@@ -496,7 +498,7 @@
           transition: all 1s ease-in forwards;
           color: grey; }
     .counselling__el__paragraph {
-      border: 2px solid transparent;
+      border: 2px solid brown;
       color: grey;
       text-align: center;
       display: flex;
@@ -508,14 +510,14 @@
   .counselling__booking {
     width: inherit;
     height: 500px;
-    border: 2px solid transparent;
+    border: 2px solid green;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
     padding: 1rem; }
     .counselling__booking__part1 {
-      border: 2px solid transparent;
+      border: 2px solid red;
       width: 600px;
       display: flex;
       height: inherit;
@@ -529,7 +531,7 @@
   .counselling-calendar {
     box-shadow: 2px 15px 40px 2px #98a7ec;
     margin: 100px;
-    border: 2px solid transparent;
+    border: 2px solid red;
     padding: 1rem;
     font-size: 1rem;
     color: grey;
@@ -623,12 +625,12 @@
       background: grey; }
 
 .article-nav-main {
-  border: 2px solid transparent;
+  border: 2px solid red;
   padding: 1rem; }
   .article-nav-main .article-nav {
-    border: 2px solid transparent; }
+    border: 2px solid red; }
     .article-nav-main .article-nav__ul {
-      border: 2px solid transparent;
+      border: 2px solid red;
       display: flex;
       flex-direction: row; }
       .article-nav-main .article-nav__ul__elem {
@@ -648,10 +650,10 @@
           border-bottom: 2px solid #ffbb00; }
 
 .articles-body__heading {
-  border: 2px solid transparent;
+  border: 2px solid red;
   padding: 1rem 2rem; }
   .articles-body__heading__text {
-    border: 2px solid transparent;
+    border: 2px solid blue;
     color: #ffbb00;
     text-decoration: underline; }
 
@@ -664,7 +666,7 @@
   flex-direction: row;
   flex-wrap: wrap-reverse;
   position: relative;
-  border: 2px solid transparent; }
+  border: 2px solid red; }
   .articlesBox__body {
     display: flex;
     width: 96vw;
@@ -672,7 +674,7 @@
     flex-direction: row;
     justify-content: flex-start;
     padding: 1rem;
-    border: 2px solid transparent; }
+    border: 2px solid green; }
     .articlesBox__body .item {
       width: 230px;
       height: 250px;
@@ -681,7 +683,7 @@
       display: flex;
       flex-direction: column;
       box-shadow: 1px 2px 20px 1px #bbbbbb;
-      border: 2px solid transparent;
+      border: 2px solid brown;
       cursor: pointer;
       background: #fff;
       border-top: 5px solid #663399;
@@ -692,13 +694,13 @@
         bottom: 20px; }
       .articlesBox__body .item__image {
         height: 100px;
-        border: 2px solid transparent;
+        border: 2px solid green;
         background: royalblue; }
         .articlesBox__body .item__image img {
           height: inherit;
           width: 100%; }
       .articlesBox__body .item__desc {
-        border: 2px solid transparent;
+        border: 2px solid brown;
         padding: 1rem;
         height: 150px;
         display: flex;
@@ -709,12 +711,12 @@
           word-wrap: break-word;
           color: black;
           text-decoration: none;
-          border: 2px solid transparent; }
+          border: 2px solid red; }
         .articlesBox__body .item__desc h3 {
           font-size: 0.8rem;
           text-decoration: none;
           font-weight: 100;
-          border: 2px solid transparent; }
+          border: 2px solid violet; }
       .articlesBox__body .item__read__link {
         width: inherit;
         height: fit-content; }
@@ -741,7 +743,7 @@
   align-items: center;
   z-index: 300; }
   .article__preview__maincon__pre {
-    border: 2px solid transparent;
+    border: 2px solid #fff;
     width: 100vw;
     height: 380px;
     background: url("../../pics/attachment_77327090.png") no-repeat;
@@ -765,7 +767,7 @@
     .article__preview__maincon__items .pre__part {
       width: 30.33%;
       height: 380px;
-      border: 2px solid transparent;
+      border: 2px solid red;
       position: relative; }
       .article__preview__maincon__items .pre__part__left .poly {
         width: 100%;
@@ -776,14 +778,14 @@
         position: absolute;
         top: 20%;
         left: 20%;
-        border: 2px solid transparent; }
+        border: 2px solid #fff; }
       .article__preview__maincon__items .pre__part__middle {
         padding: 1rem 0; }
         .article__preview__maincon__items .pre__part__middle__header {
           text-align: center;
           height: 100px; }
         .article__preview__maincon__items .pre__part__middle p {
-          border: 2px solid transparent;
+          border: 2px solid yellow;
           width: 400px;
           margin: 0 auto;
           height: 100px;
@@ -794,7 +796,7 @@
           display: flex;
           flex-direction: row;
           align-items: flex-end;
-          border: 2px solid transparent; }
+          border: 2px solid blue; }
 
 .register {
   width: 100vw;
@@ -805,7 +807,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: linear-gradient(to right, #0689c4, #159dc6);
-  border: 2px solid transparent; }
+  border: 2px solid cyan; }
   .register__pic {
     width: 50%;
     height: 500px;
@@ -813,7 +815,7 @@
     background-image: url("../../pics/Counselling.jpg");
     clip-path: polygon(50% 100%, 100% 50%, 100% 0%, 0% 0%);
     border: 3px solid #ffd700;
-    border: 2px solid transparent;
+    border: 2px solid green;
     animation: shapeChange 10s ease alternate 1s infinite; }
     .register__pic img {
       width: 400px;
@@ -828,19 +830,19 @@
     .register__forms__signIn {
       width: 50vw;
       height: inherit;
-      border: 2px solid transparent;
+      border: 2px solid red;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center; }
       .register__forms__signIn__header {
-        border: 2px solid transparent;
+        border: 2px solid lightskyblue;
         font-size: 1.5rem;
         padding: 1rem;
         width: inherit;
         height: fit-content; }
       .register__forms__signIn form {
-        border: 2px solid transparent;
+        border: 2px solid rebeccapurple;
         width: 400px;
         height: fit-content;
         padding: 2rem; }
