--- a/src/css/blog/_config.scss
+++ b/src/css/blog/_config.scss
@@ -12,7 +12,7 @@ $primary: #fa8d31;
 $secondary: #94a4a5;
 
 @mixin border($color) {
-  border: 2px solid transparent;
+  border: 2px solid $color;
 }
 
 @mixin shadow($color) {
