--- a/src/css/blog/Homepage/_counselling.scss
+++ b/src/css/blog/Homepage/_counselling.scss
@@ -111,7 +111,7 @@
     @include border(green);
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 1rem;
 
