--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -17,12 +17,12 @@
   height: 100px;
   flex-direction: row;
   justify-content: space-between;
-  border: 2px solid pink;
+  border: 2px solid transparent;
   padding: 1rem;
   background: #fff;
   color: #f6d342; }
   .nav__list {
-    border: 2px solid red;
+    border: 2px solid transparent;
     width: 650px;
     height: 80px;
     padding: 0.3rem; }
@@ -32,7 +32,7 @@
       align-items: flex-start;
       justify-content: space-around;
       padding: 0.5rem;
-      border: 2px solid blue; }
+      border: 2px solid transparent; }
       .nav__list__con li {
         list-style-type: none;
         cursor: pointer;
@@ -124,7 +124,7 @@
     width: 100%; }
 
 .paragraph_1 {
-  border: 2px solid red;
+  border: 2px solid transparent;
   width: 100vw;
   height: 700px;
   background: url("../../pics/Union 1.png");
@@ -136,7 +136,7 @@
   margin: 0vh 0;
   clip-path: polygon(0% 100%, 100% 50%, 100% 0%, 0% 0%); }
   .paragraph_1 section {
-    border: 2px solid green;
+    border: 2px solid transparent;
     width: 43vw;
     height: 500px;
     margin: 5vh 40px;
@@ -173,7 +173,7 @@
     display: flex;
     flex-direction: column;
     grid-area: 1/2;
-    border: 2px solid red; }
+    border: 2px solid transparent; }
     .paragraph_1__art .trees {
       width: 40vw;
       height: 500px;
@@ -193,12 +193,12 @@
     justify-content: space-evenly;
     padding: 1rem;
     margin-top: 20px;
-    border: 2px solid blue;
+    border: 2px solid transparent;
     border-radius: 1rem;
     flex-wrap: wrap-reverse; }
 
 .tree {
-  border: 2px solid red;
+  border: 2px solid transparent;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -220,7 +220,7 @@
     bottom: 15vh; }
 
 .articles {
-  border: 2px solid green;
+  border: 2px solid transparent;
   width: 100vw;
   height: 700px;
   display: grid;
@@ -239,7 +239,7 @@
     text-align: center;
     position: relative;
     top: 50px;
-    border: 2px solid red; }
+    border: 2px solid transparent; }
     .articles__firstChild .h2_1 {
       font-size: 2rem;
       font-weight: 100;
@@ -250,15 +250,15 @@
       word-wrap: wrap;
       text-align: center;
       position: relative;
-      border: 2px solid green; }
+      border: 2px solid transparent; }
     .articles__firstChild .h2_2 {
       font-size: 2rem;
       height: 100px;
-      border: 2px solid brown; }
+      border: 2px solid transparent; }
       .articles__firstChild .h2_2 b {
         font-size: 5rem; }
     .articles__firstChild p {
-      border: 2px solid red;
+      border: 2px solid transparent;
       width: 500px;
       height: 200px;
       margin: 10% 10%;
@@ -270,9 +270,9 @@
       height: 400px;
       position: relative;
       display: flex;
-      border: 2px solid red; }
+      border: 2px solid transparent; }
   .articles .articles__paragraph {
-    border: 2px solid cyan;
+    border: 2px solid transparent;
     height: fit-content;
     margin: 0px 40px;
     position: absolute;
@@ -283,7 +283,7 @@
     align-items: center;
     grid-area: 1/1; }
     .articles .articles__paragraph p {
-      border: 2px solid gold;
+      border: 2px solid transparent;
       width: 40vw;
       height: 200px;
       font-size: 15px;
@@ -300,7 +300,7 @@
       border-radius: 1rem;
       flex-wrap: wrap-reverse; }
   .articles-author {
-    border: 2px solid red;
+    border: 2px solid transparent;
     grid-area: 1 / 2;
     display: flex;
     justify-content: center;
@@ -319,11 +319,11 @@
   position: relative;
   overflow: hidden;
   transition: All 1s ease forwards;
-  border: 2px solid red; }
+  border: 2px solid transparent; }
   .shopping__slider {
     width: inherit;
     height: inherit;
-    border: 2px solid cyan;
+    border: 2px solid transparent;
     position: relative;
     overflow: hidden;
     transition: all 1s ease-in; }
@@ -334,11 +334,11 @@
       position: absolute;
       animation: showUp 3s ease-in forwards;
       border: 1px solid #fff;
-      border: 2px solid blue; }
+      border: 2px solid transparent; }
       .shopping__slider__one h2 {
         font-size: 4rem;
         width: 100%;
-        border: 2px solid red;
+        border: 2px solid transparent;
         color: deepskyblue; }
     .shopping__slider .shop-section-1 {
       width: 100vw;
@@ -353,11 +353,10 @@
       width: inherit;
       height: inherit;
       display: grid;
-      border: 4px solid red;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(3, 1fr); }
       .shopping__slider .shop-section-2 .childTwoHeader {
-        border: 2px solid blue;
+        border: 2px solid transparent;
         grid-area: 2/3;
         width: 350px;
         height: 220px;
@@ -366,7 +365,7 @@
         .shopping__slider .shop-section-2 .childTwoHeader h2 {
           font-size: 4rem;
           width: 100%;
-          border: 2px solid cyan; }
+          border: 2px solid transparent; }
   .shopping .loveIcon {
     position: relative;
     animation: expands 0.2s ease-in-out forwards; }
@@ -383,16 +382,16 @@
       position: relative;
       animation: moveRight 2s ease 4s forwards infinite; }
   .shopping__paragraph {
-    border: 2px solid red;
+    border: 2px solid transparent;
     grid-area: 2 / 3;
     padding: 2rem 1rem;
     height: 450px;
     position: relative;
     bottom: 200px;
-    right: 50%;
-    margin: 0vh 5vh; }
+    right: 70%;
+    margin: 0vh 0vh; }
     .shopping__paragraph__text {
-      border: 2px solid blue;
+      border: 2px solid transparent;
       width: 500px;
       height: 200px;
       padding: 1rem;
@@ -405,7 +404,7 @@
     border-radius: 1%;
     margin: 50px 0;
     position: relative;
-    border: 2px solid green;
+    border: 2px solid transparent;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -431,10 +430,10 @@
   display: flex;
   flex-direction: column;
   margin-top: 2vh;
-  border: 2px solid blue; }
+  border: 2px solid transparent; }
   .counselling__header {
     width: 100%;
-    border: 2px solid red;
+    border: 2px solid transparent;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -447,9 +446,9 @@
       align-items: center;
       justify-content: center;
       position: relative;
-      border: 2px solid gold; }
+      border: 2px solid transparent; }
       .counselling__header__name h1 {
-        border: 2px solid red;
+        border: 2px solid transparent;
         font-size: 4rem;
         text-align: center;
         position: relative;
@@ -465,14 +464,14 @@
       .counselling__header__name h2 {
         color: #34a2e2; }
   .counselling__el {
-    border: 2px solid black;
+    border: 2px solid transparent;
     height: 500px;
     width: 99vw;
     background: #f4f4f4; }
     .counselling__el__feeling {
       width: inherit;
       height: 250px;
-      border: 2px solid red;
+      border: 2px solid transparent;
       padding: 1rem;
       display: flex;
       flex-direction: row;
@@ -480,14 +479,14 @@
       align-items: center; }
       .counselling__el__feeling .text {
         padding: 1rem;
-        border: 2px solid pink; }
+        border: 2px solid transparent; }
         .counselling__el__feeling .text__content {
           position: relative; }
         .counselling__el__feeling .text h2 {
           font-size: 2rem;
           color: grey; }
       .counselling__el__feeling .feeling {
-        border: 2px solid pink;
+        border: 2px solid transparent;
         height: 150px;
         text-align: center;
         padding: 1rem; }
@@ -498,7 +497,7 @@
           transition: all 1s ease-in forwards;
           color: grey; }
     .counselling__el__paragraph {
-      border: 2px solid brown;
+      border: 2px solid transparent;
       color: grey;
       text-align: center;
       display: flex;
@@ -510,14 +509,14 @@
   .counselling__booking {
     width: inherit;
     height: 500px;
-    border: 2px solid green;
+    border: 2px solid transparent;
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 1rem; }
     .counselling__booking__part1 {
-      border: 2px solid red;
+      border: 2px solid transparent;
       width: 600px;
       display: flex;
       height: inherit;
@@ -531,7 +530,7 @@
   .counselling-calendar {
     box-shadow: 2px 15px 40px 2px #98a7ec;
     margin: 100px;
-    border: 2px solid red;
+    border: 2px solid transparent;
     padding: 1rem;
     font-size: 1rem;
     color: grey;
@@ -625,12 +624,12 @@
       background: grey; }
 
 .article-nav-main {
-  border: 2px solid red;
+  border: 2px solid transparent;
   padding: 1rem; }
   .article-nav-main .article-nav {
-    border: 2px solid red; }
+    border: 2px solid transparent; }
     .article-nav-main .article-nav__ul {
-      border: 2px solid red;
+      border: 2px solid transparent;
       display: flex;
       flex-direction: row; }
       .article-nav-main .article-nav__ul__elem {
@@ -650,10 +649,10 @@
           border-bottom: 2px solid #ffbb00; }
 
 .articles-body__heading {
-  border: 2px solid red;
+  border: 2px solid transparent;
   padding: 1rem 2rem; }
   .articles-body__heading__text {
-    border: 2px solid blue;
+    border: 2px solid transparent;
     color: #ffbb00;
     text-decoration: underline; }
 
@@ -666,7 +665,7 @@
   flex-direction: row;
   flex-wrap: wrap-reverse;
   position: relative;
-  border: 2px solid red; }
+  border: 2px solid transparent; }
   .articlesBox__body {
     display: flex;
     width: 96vw;
@@ -674,7 +673,7 @@
     flex-direction: row;
     justify-content: flex-start;
     padding: 1rem;
-    border: 2px solid green; }
+    border: 2px solid transparent; }
     .articlesBox__body .item {
       width: 230px;
       height: 250px;
@@ -683,7 +682,7 @@
       display: flex;
       flex-direction: column;
       box-shadow: 1px 2px 20px 1px #bbbbbb;
-      border: 2px solid brown;
+      border: 2px solid transparent;
       cursor: pointer;
       background: #fff;
       border-top: 5px solid #663399;
@@ -694,13 +693,13 @@
         bottom: 20px; }
       .articlesBox__body .item__image {
         height: 100px;
-        border: 2px solid green;
+        border: 2px solid transparent;
         background: royalblue; }
         .articlesBox__body .item__image img {
           height: inherit;
           width: 100%; }
       .articlesBox__body .item__desc {
-        border: 2px solid brown;
+        border: 2px solid transparent;
         padding: 1rem;
         height: 150px;
         display: flex;
@@ -711,12 +710,12 @@
           word-wrap: break-word;
           color: black;
           text-decoration: none;
-          border: 2px solid red; }
+          border: 2px solid transparent; }
         .articlesBox__body .item__desc h3 {
           font-size: 0.8rem;
           text-decoration: none;
           font-weight: 100;
-          border: 2px solid violet; }
+          border: 2px solid transparent; }
       .articlesBox__body .item__read__link {
         width: inherit;
         height: fit-content; }
@@ -743,7 +742,7 @@
   align-items: center;
   z-index: 300; }
   .article__preview__maincon__pre {
-    border: 2px solid #fff;
+    border: 2px solid transparent;
     width: 100vw;
     height: 380px;
     background: url("../../pics/attachment_77327090.png") no-repeat;
@@ -767,7 +766,7 @@
     .article__preview__maincon__items .pre__part {
       width: 30.33%;
       height: 380px;
-      border: 2px solid red;
+      border: 2px solid transparent;
       position: relative; }
       .article__preview__maincon__items .pre__part__left .poly {
         width: 100%;
@@ -778,14 +777,14 @@
         position: absolute;
         top: 20%;
         left: 20%;
-        border: 2px solid #fff; }
+        border: 2px solid transparent; }
       .article__preview__maincon__items .pre__part__middle {
         padding: 1rem 0; }
         .article__preview__maincon__items .pre__part__middle__header {
           text-align: center;
           height: 100px; }
         .article__preview__maincon__items .pre__part__middle p {
-          border: 2px solid yellow;
+          border: 2px solid transparent;
           width: 400px;
           margin: 0 auto;
           height: 100px;
@@ -796,7 +795,7 @@
           display: flex;
           flex-direction: row;
           align-items: flex-end;
-          border: 2px solid blue; }
+          border: 2px solid transparent; }
 
 .register {
   width: 100vw;
@@ -807,7 +806,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: linear-gradient(to right, #0689c4, #159dc6);
-  border: 2px solid cyan; }
+  border: 2px solid transparent; }
   .register__pic {
     width: 50%;
     height: 500px;
@@ -815,7 +814,7 @@
     background-image: url("../../pics/Counselling.jpg");
     clip-path: polygon(50% 100%, 100% 50%, 100% 0%, 0% 0%);
     border: 3px solid #ffd700;
-    border: 2px solid green;
+    border: 2px solid transparent;
     animation: shapeChange 10s ease alternate 1s infinite; }
     .register__pic img {
       width: 400px;
@@ -830,19 +829,19 @@
     .register__forms__signIn {
       width: 50vw;
       height: inherit;
-      border: 2px solid red;
+      border: 2px solid transparent;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center; }
       .register__forms__signIn__header {
-        border: 2px solid lightskyblue;
+        border: 2px solid transparent;
         font-size: 1.5rem;
         padding: 1rem;
         width: inherit;
         height: fit-content; }
       .register__forms__signIn form {
-        border: 2px solid rebeccapurple;
+        border: 2px solid transparent;
         width: 400px;
         height: fit-content;
         padding: 2rem; }
