--- a/src/css/blog/main.scss
+++ b/src/css/blog/main.scss
@@ -13,6 +13,8 @@
 @import "Articlespage/articlePage__body";
 @import "ArticlesPage/aritcle__preview";
 
+@import "Reader/reader";
+
 @import "RegisterPage/registerpage";
 @import "footer";
 
