--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -730,7 +730,6 @@
 
 .article__preview__maincon {
   background: rgba(194, 194, 197, 0.349);
-  color: #fff;
   width: 100vw;
   height: 100vh;
   position: fixed;
@@ -742,18 +741,17 @@
   align-items: center;
   z-index: 300; }
   .article__preview__maincon__pre {
+    box-shadow: 2px 2px 21px 2px #6b6565;
     border: 2px solid transparent;
     width: 100vw;
     height: 380px;
-    background: url("../../pics/attachment_77327090.png") no-repeat;
-    background-size: 100vw;
-    background-position: -00px -300px;
+    background: #f4f4f4;
     margin: 100px 0;
     display: flex;
     flex-direction: row;
+    padding: 1rem;
     position: absolute;
     top: 0;
-    filter: blur(5px);
     z-index: 301; }
   .article__preview__maincon__items {
     position: absolute;
@@ -782,7 +780,8 @@
         padding: 1rem 0; }
         .article__preview__maincon__items .pre__part__middle__header {
           text-align: center;
-          height: 100px; }
+          height: 100px;
+          padding: 1rem; }
         .article__preview__maincon__items .pre__part__middle p {
           border: 2px solid transparent;
           width: 400px;
