--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -827,8 +827,67 @@
         color: grey;
         font-weight: 100;
         margin: 2% 0; }
-  .reader__main__content {
-    width: 90%; }
+  .reader__main__body {
+    width: 99vw;
+    height: fit-content;
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap-reverse;
+    position: relative;
+    border: 2px solid transparent; }
+    .reader__main__body .item {
+      width: 330px;
+      height: 250px;
+      margin: 10px 0px 0px 0px;
+      border-radius: 5px;
+      display: flex;
+      flex-direction: column;
+      box-shadow: 1px 2px 20px 1px #bbbbbb;
+      border: 2px solid transparent;
+      cursor: pointer;
+      background: #fff;
+      border-top: 5px solid #663399;
+      position: relative;
+      transition: all 1s ease-in; }
+      .reader__main__body .item:hover {
+        bottom: 20px; }
+      .reader__main__body .item__image {
+        height: 100px;
+        border: 2px solid transparent;
+        background: royalblue; }
+        .reader__main__body .item__image img {
+          height: inherit;
+          width: 100%; }
+      .reader__main__body .item__desc {
+        border: 2px solid transparent;
+        padding: 1rem;
+        height: 150px;
+        display: flex;
+        flex-direction: column;
+        text-decoration: none;
+        justify-content: space-between; }
+        .reader__main__body .item__desc h2 {
+          word-wrap: break-word;
+          color: black;
+          text-decoration: none;
+          border: 2px solid transparent; }
+        .reader__main__body .item__desc h3 {
+          font-size: 0.8rem;
+          text-decoration: none;
+          font-weight: 100;
+          border: 2px solid transparent; }
+      .reader__main__body .item__read__link {
+        width: inherit;
+        height: fit-content; }
+        .reader__main__body .item__read__link button {
+          background: none;
+          margin: 0 auto;
+          color: orange;
+          width: 130px;
+          border: none;
+          padding: 0.5rem;
+          cursor: pointer; }
 
 .register {
   width: 100vw;
