Modified footer icons and changed logo content

--- a/src/css/blog/_logo.scss
+++ b/src/css/blog/_logo.scss
@@ -1,13 +1,16 @@
 .logo {
   height: 60px;
-  width: 60px;
+  width: 160px;
   padding: 0.5rem;
-  box-shadow: 1px 2px 20px 2px rgb(138, 140, 141);
+  // box-shadow: 1px 2px 20px 2px rgb(138, 140, 141);
   border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  @include border(red);
 
   h1 {
     padding: 0.3rem;
-    color: $orange;
+    color: royalblue;
     font-size: 2rem;
     b {
       color: $secondary-blue;
