--- a/src/css/blog/main.scss
+++ b/src/css/blog/main.scss
@@ -30,6 +30,19 @@ body {
   .move-right {
     animation: moveRight 1s ease forwards infinite;
   }
+
+  .loader{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    p{
+      font-size: 2rem;
+      color: royalblue;
+      
+    }
+  }
   .bounce {
     animation: "bounce 5s ease forwards";
     transition: "1s ease-in-out forwards";
