--- a/src/css/blog/Homepage/_header.scss
+++ b/src/css/blog/Homepage/_header.scss
@@ -8,6 +8,21 @@
   grid-template-rows: repeat(3, 1fr);
   justify-content: center;
   z-index: 50;
+  // background: #0099ff;
+  position: relative;
+  .head__svg {
+    // fill: #fff;
+    border: 1px solid blue;
+  }
+  .one {
+    position: absolute;
+    bottom: 500px;
+    // z-index: 300;
+  }.two{
+    position: absolute;
+    // z-index: 300;
+    top: 500px;
+  }
 
   h1 {
     font-size: 3rem;
@@ -36,7 +51,7 @@
     margin: 0 auto 150px auto;
     @include flexCon(row, true, false);
 
-    button:nth-of-type(){
+    button:nth-of-type() {
       background: blue;
     }
   }
@@ -44,6 +59,7 @@
     border-right: none;
     border-left: none;
     position: absolute;
+    margin: 10vh 0;
     width: 100vw;
     height: 400px;
   }
