--- a/src/css/blog/Homepage/_shopping.scss
+++ b/src/css/blog/Homepage/_shopping.scss
@@ -26,7 +26,7 @@
         font-size: 4rem;
         width: 100%;
         @include border(red);
-        color: deepskyblue;
+        color: #fff;
       }
     }
     .shop-section-1 {
