--- a/src/css/blog/main.css
+++ b/src/css/blog/main.css
@@ -510,7 +510,7 @@
         width: 500px; }
   .counselling__booking {
     width: inherit;
-    height: 500px;
+    height: 650px;
     border: 2px solid transparent;
     display: flex;
     flex-direction: row-reverse;
@@ -521,24 +521,60 @@
       border: 2px solid transparent;
       width: 600px;
       display: flex;
-      height: inherit;
+      height: 600px;
       flex-direction: column;
-      align-items: center;
       justify-content: space-evenly; }
+      .counselling__booking__part1 .assurance {
+        color: royalblue;
+        height: 200px;
+        margin: 50px 0;
+        border-radius: 5px;
+        padding: 1rem;
+        text-align: center; }
       .counselling__booking__part1 h2 {
-        color: royalblue; }
-      .counselling__booking__part1 .buttons {
-        margin: 50px 0; }
-  .counselling-calendar {
-    box-shadow: 2px 15px 40px 2px #98a7ec;
-    margin: 100px;
-    border: 2px solid transparent;
-    padding: 1rem;
-    font-size: 1rem;
-    color: grey;
-    width: 500px; }
-    .counselling-calendar abbr {
-      text-decoration: none; }
+        color: royalblue;
+        font-size: 1.5rem; }
+        .counselling__booking__part1 h2 big {
+          font-size: 2rem;
+          color: orange; }
+      .counselling__booking__part1 .contact {
+        width: 650px;
+        height: 240px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        border: 2px solid transparent; }
+        .counselling__booking__part1 .contact p {
+          color: grey;
+          margin: 20px 0; }
+        .counselling__booking__part1 .contact__links {
+          width: 650px;
+          height: 100px;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-around; }
+          .counselling__booking__part1 .contact__links a {
+            width: 200px;
+            height: 70px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-evenly;
+            padding: 1rem 4rem;
+            border-radius: 5px;
+            color: #000;
+            background: #fff;
+            text-decoration: none;
+            border: 2px solid transparent;
+            transition: all 0.5s ease; }
+            .counselling__booking__part1 .contact__links a:hover {
+              box-shadow: 2px 12px 15px 1px #ccb3e6; }
+          .counselling__booking__part1 .contact__links .insta {
+            box-shadow: 2px 12px 15px 1px #ffcccc; }
+          .counselling__booking__part1 .contact__links .mail {
+            box-shadow: 2px 12px 15px 1px #ffcccc; }
+          .counselling__booking__part1 .contact__links .tel {
+            box-shadow: 2px 12px 15px 1px #ffcccc; }
 
 .ArticleHeader {
   margin: 5vh 0;
@@ -1073,7 +1109,7 @@ body {
     bottom: 20px;
     left: 20px; }
     body .btn-imp:hover {
-      box-shadow: -5px 5px 50px 1px #f6d342; }
+      box-shadow: 2px 12px 15px 1px #fbeaa3; }
     body .btn-imp:focus {
       box-shadow: 0 0 0 0; }
   body .btn-norm {
@@ -1088,7 +1124,7 @@ body {
     background: #fff;
     color: #f6d342; }
     body .btn-norm:hover {
-      box-shadow: 2px 2px 50px 2px #f6d342; }
+      box-shadow: 2px 12px 15px 1px #fbeaa3; }
     body .btn-norm:focus {
       box-shadow: 0 0 0 0; }
   body .button:hover {
